# filler-wiki-api

./: .gitignore  .pdm-python  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: main.py
app/core/: auth.py  config.py  crud.py  database.py  description.py  enums.py  exceptions.py  logging.py  schemas.py  security.py
app/core/models/: response.py  user.py
app/routes/: __init__.py  auth.py  brand.py  merchant.py  test_axione.py
scripts/: init_collections.py
tests/: conftest.py  test_auth.py  test_test_axione.py
